# first-trust

./: CMakeLists.txt  README.md
inc/: game.h  player.h  state.h  trust.h
src/: CMakeLists.txt  game.cpp  state.cpp  trust.cpp
